refactor: Major workflow optimization and cleanup
Improvements:
1. Simplified .env creation
   - Changed from multiple 'echo >>' commands to single 'cat << EOF'
   - Removed unnecessary 'cd projects' and 'cd ..' commands
   - Consistent approach across all 4 workflows

2. Removed redundant artifact uploads
   - fetch-ibkr: Excel file already committed to repo (removed 7-day artifact)
   - var-cvar: JSON file already committed to repo (removed 30-day artifact)
   - Saves GitHub storage and reduces workflow complexity

3. Removed unused output variables
   - fetch-ibkr: position_count, timestamp, exit_code (not used after removing notifications)
   - var-cvar: var_95, cvar_95, timestamp, exit_code (not used after removing notifications)
   - decision-matrix: extract summary step (output never consumed)

4. Simplified script execution
   - Changed from 'cd projects && python script.py' to 'python projects/script.py'
   - Removed unnecessary log file redirects and parsing
   - Cleaner, more maintainable code

Benefits:
- ~40% less code in workflows
- Faster execution (fewer operations)
- Easier to read and maintain
- Reduced GitHub storage usage
- More consistent patterns across workflows

--- a/.github/workflows/decision-matrix-alert.yml
+++ b/.github/workflows/decision-matrix-alert.yml
@@ -69,31 +69,8 @@ jobs:
           EOF
       
       - name: Run decision matrix analysis
-        id: analysis
         run: |
-          cd projects
-          python decision-matrix-alert.py
-        continue-on-error: true
-      
-      - name: Extract decision matrix summary
-        if: success()
-        id: extract
-        run: |
-          # Get latest decision history entry
-          LATEST=$(python3 -c "
-          import json
-          with open('decision_history.json', 'r') as f:
-              history = json.load(f)
-              latest = history[-1]
-              print(f\"Score: {latest['risk_score']}/100\")
-              print(f\"VaR: \${latest['var_95']:,.0f}\")
-              print(f\"Quadrant: {latest['quadrant']}\")
-              print(f\"Action: {latest['action']}\")
-          ")
-          
-          echo "summary<<EOF" >> $GITHUB_OUTPUT
-          echo "$LATEST" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+          python projects/decision-matrix-alert.py
       
       - name: Upload decision history artifact
         if: always()
