--- a/.github/workflows/institutional-risk-signal.yml
+++ b/.github/workflows/institutional-risk-signal.yml
@@ -46,15 +46,14 @@ jobs:
       
       - name: Create .env file
         run: |
-          cd projects
-          echo "FRED_API_KEY=${{ secrets.FRED_API_KEY }}" >> .env
-          echo "ANTHROPIC_API_KEY=${{ secrets.ANTHROPIC_API_KEY }}" >> .env
-          echo "GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}" >> .env
-          echo "TELEGRAM_TOKEN_RISK=${{ secrets.TELEGRAM_TOKEN_RISK }}" >> .env
-          echo "CHAT_ID=${{ secrets.CHAT_ID }}" >> .env
+          cat > projects/.env << EOF
+          FRED_API_KEY=${{ secrets.FRED_API_KEY }}
+          ANTHROPIC_API_KEY=${{ secrets.ANTHROPIC_API_KEY }}
+          GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
+          TELEGRAM_TOKEN_RISK=${{ secrets.TELEGRAM_TOKEN_RISK }}
+          CHAT_ID=${{ secrets.CHAT_ID }}
+          EOF
           echo "✅ Created .env file in projects directory"
-          cat .env | head -1
-          cd ..
       
       - name: Run Risk Assessment
         run: |
