--- a/.github/workflows/fetch-ibkr-positions.yml
+++ b/.github/workflows/fetch-ibkr-positions.yml
@@ -82,4 +82,5 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git add projects/fetch-ibkr-positions.xlsx
           git diff --staged --quiet || git commit -m "Update IBKR positions Excel (automated)"
+          git pull --rebase origin main
           git push
