--- a/.github/workflows/fetch-ibkr-positions.yml
+++ b/.github/workflows/fetch-ibkr-positions.yml
@@ -80,7 +80,14 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git pull --rebase origin main
           git add projects/fetch-ibkr-positions.xlsx
-          git diff --staged --quiet || git commit -m "Update IBKR positions Excel (automated)"
-          git push
+          git diff --staged --quiet && echo "No changes to commit" && exit 0
+          git commit -m "Update IBKR positions Excel (automated)"
+          # Retry push up to 5 times to handle concurrent workflow pushes
+          for i in 1 2 3 4 5; do
+            git pull --rebase origin main && git push origin main && echo "✅ Push succeeded on attempt $i" && exit 0
+            echo "⚠️ Push attempt $i failed, retrying in 10s..."
+            sleep 10
+          done
+          echo "❌ All push attempts failed"
+          exit 1
