--- a/.github/workflows/fetch-ibkr-positions.yml
+++ b/.github/workflows/fetch-ibkr-positions.yml
@@ -80,22 +80,19 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add projects/fetch-ibkr-positions.xlsx
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-            exit 0
-          fi
+          # Check if file actually changed before doing anything
+          git diff --quiet projects/fetch-ibkr-positions.xlsx && echo "No changes to commit" && exit 0
           # Retry up to 5 times handling concurrent pushes from other workflows
           for i in 1 2 3 4 5; do
-            echo "Attempt $i: pulling latest then pushing..."
+            echo "Attempt $i: pulling latest then committing and pushing..."
             git pull --rebase origin main
-            git commit -m "Update IBKR positions Excel (automated)" 2>/dev/null || true
+            git add projects/fetch-ibkr-positions.xlsx
+            git commit -m "Update IBKR positions Excel (automated)"
             if git push origin main; then
               echo "✅ Push succeeded on attempt $i"
               exit 0
             fi
             echo "⚠️ Push failed on attempt $i, retrying in 15s..."
-            git rebase --abort 2>/dev/null || true
             sleep 15
           done
           echo "❌ All push attempts failed"
