--- a/.github/workflows/fetch-ibkr-positions.yml
+++ b/.github/workflows/fetch-ibkr-positions.yml
@@ -73,33 +73,36 @@ jobs:
       - name: Fetch IBKR positions
         run: |
           python projects/fetch-ibkr-positions.py
-      
-      
+
+      - name: Auto-categorize new positions
+        run: |
+          python projects/auto-categorize-positions.py
+
       - name: Commit Excel file to repository
         if: success()
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          # Check if file actually changed before doing anything
-          if git diff --quiet projects/fetch-ibkr-positions.xlsx; then
+          # Check if either file actually changed before doing anything
+          if git diff --quiet projects/fetch-ibkr-positions.xlsx projects/portfolio_categories_mappings.py; then
             echo "No changes to commit"
             exit 0
           fi
-          # Stash the updated xlsx, pull latest, unstash, then commit+push
-          git stash push -m "ibkr-positions-update" projects/fetch-ibkr-positions.xlsx
+          # Stash updated files, pull latest, unstash, then commit+push
+          git stash push -m "ibkr-positions-update" projects/fetch-ibkr-positions.xlsx projects/portfolio_categories_mappings.py
           # Retry up to 5 times handling concurrent pushes from other workflows
           for i in 1 2 3 4 5; do
             echo "Attempt $i: pulling latest then committing and pushing..."
             git pull --rebase origin main
             git stash pop
-            git add projects/fetch-ibkr-positions.xlsx
-            git commit -m "Update IBKR positions Excel (automated)"
+            git add projects/fetch-ibkr-positions.xlsx projects/portfolio_categories_mappings.py
+            git commit -m "Update IBKR positions + auto-categorize mappings (automated)"
             if git push origin main; then
               echo "✅ Push succeeded on attempt $i"
               exit 0
             fi
             echo "⚠️ Push failed on attempt $i, re-stashing and retrying in 15s..."
-            git stash push -m "ibkr-positions-update" projects/fetch-ibkr-positions.xlsx
+            git stash push -m "ibkr-positions-update" projects/fetch-ibkr-positions.xlsx projects/portfolio_categories_mappings.py
             git reset HEAD~1
             sleep 15
           done
