--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ build/
 
 # Project specific
 *.log
+
+# Local-only Excel files (manually maintained, not used by GitHub Actions)
+projects/fetch-ibkr-positions-dashboard.xlsx
